--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="div">
+    <div id="app">
         {{ hello }}
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
